# BlingFire

./: CMakeLists.txt
.github/workflows/: build.yml
bindings/dotnet/: BlingFireDotNet.slnx
bindings/dotnet/BlingFireDotNet/: BlingFire.cs  BlingFireDotNet.csproj  BlingFireDotNet.targets  NativeMethods.cs
bindings/dotnet/BlingFireDotNet.Tests/: BlingFireDotNet.Tests.csproj  BuiltInModelTests.cs  LoadedModelTests.cs
blingfireclient.library/inc/: FAConfig.h
blingfirecompile.library/inc/: FAUtils.h
nuget/lib/: BlingFireNuget.csproj  BlingFireUtils.cs  BlingFireUtils2.cs
nuget/lib/targets/: BlingFireNuget.targets
